force-app/main/default/objects/HelpVoteSet__c/HelpVoteSet__c.object-meta.xml
<CustomObject>
    <description>Define groups of Help Vote Options from which Users can select to cast a Vote</description>
    <label>Help Vote Set</label>
    <nameField>
        <label>Help Vote Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Vote Sets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>