force-app/main/default/objects/HelpVoteSet__c/fields/ImageClass__c.field-meta.xml
<CustomField>
    <fullName>ImageClass__c</fullName>
    <description>URL (relative or full path) of an image to use for this Help Vote Set</description>
    <inlineHelpText>URL (relative or full path) of an image to use for this Help Vote Set</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>