force-app/main/default/objects/HelpVoteSet__c/fields/ImagePreview__c.field-meta.xml
<CustomField>
    <fullName>ImagePreview__c</fullName>
    <formula>IF(ImageClass__c == &apos;&apos; || ImageClass__c == null, &apos;&apos;, IMAGE( ImageClass__c ,  QuestionText__c, 16, 16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Preview</label>
    <type>Text</type>
</CustomField>