force-app/main/default/objects/HelpVoteSet__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <description>The question to present to Users when offering the Help Vote Options from which to select</description>
    <inlineHelpText>The question to present to Users when offering the Help Vote Options from which to select</inlineHelpText>
    <label>Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>