force-app/main/default/objects/HelpVoteSet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuestionText__c</columns>
    <columns>ImageClass__c</columns>
    <columns>ImagePreview__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Help Vote Sets</label>
</ListView>